--- a/css/style.css
+++ b/css/style.css
@@ -1,42 +1,40 @@
 body {
-  background-color: #ff0000;
-  color: #0000FF;
-}
-
+  /* exercise (7)*/
+  background-color: white;
+  /* exercise (7)*/
+  color: black;
+  /* exercise (4)*/
+  line-height: 1.3;
+  /*font-size: 16px; exercise (2)*/
+  }
 nav {
   background-color: rgba(0,0,0,.5);
   float: left;
   position: fixed;
   width: 100%;
 }
-
 .logo {
   margin: 20px;
-  width: 100px;
+  width: 120px;
 }
-
 .large-pic {
   width: 100%;
 }
-
 .medium-pic {
   width: 70%;
-}
-
+  }
 .left, .right {
   float: left;
   width: 50%;
 }
-
 .right {
   float: right;
+  font-size: 20px;
 }
-
 ul {
   list-style-type: none;
   float: right;
 }
-
 li {
   float: right;
   padding: 30px;
@@ -45,8 +43,30 @@ li {
 article {
   padding-top: 100px;
 }
+/* exercise (6)*/
+a {
+  text-decoration: none;
+}
+/* exercise (6)*/
+a:link { color:#1E51EE; } /* unvisited */
+a:visited { color:#A0B1E3; } /* visited */
+a:hover { color:#0F2D88; } /* mouse over */
+a:active { color:#A0B1E3; } /* selected */
 
 .container {
   margin: 0 auto;
   width: 50%;
+}
+/* exercise (3)*/
+.h1 {
+  font-size: 36px;
+  font-weight: 600;
+}
+/* exercise (3)*/
+.h3 {
+  font-size: 24px;
+}
+/* exercise (3)*/
+.author{
+  font-weight: bolder;
 }
