--- a/css/style.css
+++ b/css/style.css
@@ -2,15 +2,14 @@ body {
   /* exercise (7)*/
   background-color: white;
   /* exercise (7)*/
-  color: black;
+  color: #113654;
   /* exercise (4)*/
   line-height: 1.3;
-  /*font-size: 16px; exercise (2)*/
+  font-size: 10px; /*exercise (2)*/
   }
 nav {
   background-color: rgba(0,0,0,.5);
   float: left;
-  position: fixed;
   width: 100%;
 }
 .logo {
@@ -29,7 +28,7 @@ nav {
 }
 .right {
   float: right;
-  font-size: 20px;
+  font-size: 2rem;
 }
 ul {
   list-style-type: none;
@@ -48,7 +47,7 @@ a {
   text-decoration: none;
 }
 /* exercise (6)*/
-a:link { color:#1E51EE; } /* unvisited */
+a:link { color:#DDE1EB; } /* unvisited */
 a:visited { color:#A0B1E3; } /* visited */
 a:hover { color:#0F2D88; } /* mouse over */
 a:active { color:#A0B1E3; } /* selected */
@@ -59,14 +58,33 @@ a:active { color:#A0B1E3; } /* selected */
 }
 /* exercise (3)*/
 .h1 {
-  font-size: 36px;
+  font-size: 2.2rem;
   font-weight: 600;
 }
 /* exercise (3)*/
 .h3 {
-  font-size: 24px;
+  font-size: 1.6rem;
 }
 /* exercise (3)*/
 .author{
   font-weight: bolder;
+  font-size: 1.2rem;
+}
+figure {
+  float: right;
+  width: 30%;
+  text-align: center;
+  font-style: italic;
+  font-size: smaller;
+  text-indent: 0;
+  border: thin silver solid;
+  margin: 0.5em;
+  padding: 0.5em;
+  font-size: 1rem;
+}
+.story-text{
+  font-size: 1.2rem;
+}
+.left{
+  margin-top: 10px;
 }
